# nexus

./: .env.example  README.md  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml  test_mlx_request.py
.codex/: AGENTS.md
.github/actions/setup/: action.yml
.github/workflows/: ci-workflows.yml  push-img.yml  run-docker-tests.yml  run-linters.yml  run-local-tests.yml  run-tests.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
dev/mocks/: mock_mlx_client.py  mock_ollama_client.py  mock_vllm_client.py
sdk/: README.md
sdk/nexus_sdk/: __init__.py
sdk/nexus_sdk/nexus_client/: __init__.py  base_client.py  client.py  mlx_client.py  mock.py  ollama_client.py  protocol.py  vllm_client.py
sdk/stella_connector_sdk/: __init__.py
sdk/stella_connector_sdk/stella_client/: __init__.py
sdk/stella_connector_sdk/stella_connector_client/: client.py  mock.py  protocol.py
sdk/stl_conn_sdk/: __init__.py
sdk/stl_conn_sdk/stl_conn_client/: __init__.py  client.py  mock.py  protocol.py  response.py
src/fapi_tmpl/: container.py
src/fapi_tmpl/api/: __init__.py  (+2 more)
src/nexus/: __init__.py  dependencies.py
src/stella_connector/: __init__.py  container.py  dependencies.py
src/stl_conn/: __init__.py
tests/: conftest.py
tests/e2e/: conftest.py
tests/intg/: test_api.py  test_chat_completions.py  test_chat_invoke.py  test_openapi.py
tests/sdk/: test_mock_strategies.py  test_nexus_client.py  test_stella_client.py  test_stl_conn_client.py
tests/unit/: test_dependencies.py  test_dependency_container.py
(+49 files in other folders)
