[project]
name = "stl-conn"
version = "1.2.0"
description = "A database-independent FastAPI project template."
authors = [
    { name = "akitorahayashi" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "mlx-lm>=0.13.0; sys_platform == 'darwin'",
    "ollama>=0.3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv==1.0.1",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stl_conn", "sdk/stl_conn_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v -s --tb=short"
pythonpath = ["src", "."]

[tool.black]
target-version = ['py312']
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.cache
    | \.uv-cache
    | \.venv
    | venv
    | env
    | build
    | dist
    | .*/(bin|lib|share|etc)
    | .*/pyvenv\.cfg
)/
'''

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "migrations",
    "db.sqlite3",
    "*.pyc",
    ".uv-cache",
    ".cache",
    "*/.cache/*",
    ".venv",
    "venv",
    "env",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
